--- a/quiz.html
+++ b/quiz.html
@@ -14,7 +14,7 @@
 
 			<div class="explanation">
 				<div class="flag">
-					<img src="static/img/flag-NL.jpg">
+					<img src="static/img/Flag-NL.jpg">
 				</div>
 				<h2>Welk team weet het meest<BR>over Amsterdam?</h2>
 				<p>Volg de stappen op het andere scherm om deel te nemen en test jouw kennis over Amsterdam, samen met anderen.</p>
@@ -26,7 +26,7 @@
 
 			<div class="explanation">
 				<div class="flag">
-					<img src="static/img/flag-EN.jpg">
+					<img src="static/img/Flag-EN.jpg">
 				</div>
 				<h2>Which team knows more<BR>about Amsterdam?</h2>
 				<p>Follow the steps on the other screen to participate and test your knowledge of Amsterdam, together with other people.</p>
